# coinflip

./: Cargo.toml
ctf-try-the-coinflip/: Cargo.toml
ctf-try-the-coinflip/meta/: Cargo.toml
ctf-try-the-coinflip/meta/src/: main.rs
ctf-try-the-coinflip/src/: ctf_coinflip_proxy.rs  ctf_try_the_coinflip.rs
ctf-try-the-coinflip/wasm/: Cargo.toml
ctf-try-the-coinflip/wasm/src/: lib.rs
interact/src/: basic_interact.rs  ctf_coinflip_proxy.rs  ctf_try_coinflip_proxy.rs
