[package]
name = "ctf-try-the-coinflip"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/ctf_try_the_coinflip.rs"

[dependencies.multiversx-sc]
version = "0.51.1"

[dependencies.bump-common]
path = "../bump-common"

[dev-dependencies.multiversx-sc-scenario]
version = "0.51.1"
